# flower-v6-poc

./: Dockerfile  README.md  algorithm_store.json  docker-compose.yml  intercepting_flower_messages.md  main.py  pyproject.toml  setup.py
docker-test/: Dockerfile  README.md  pyproject.toml
docker-test/docker_test/: __init__.py  client_app.py  server_app.py  task.py
docs/: README.md  conf.py  index.rst
docs/flower-poc/: implementation.rst  usage.rst
flower-poc/: central.py  partial.py
proxy/: Dockerfile  proxy_test.py  pyproject.toml
superlink/: Dockerfile
supernode/: Dockerfile
test/: test.py
