[project]
name = "flower-v6-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flwr[rest]>=1.23.0",
    "pandas>=2.3.3",
    "vantage6>=4.13.1",
    "vantage6-algorithm-tools>=4.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["docker-test/docker_test"]

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.app]
publisher = "flower"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "docker_test.server_app:app"
clientapp = "docker_test.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 0.5
local-epochs = 1
lr = 0.01

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS

[tool.uv.workspace]
members = [
    "proxy",
]
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
